--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
   margin: 4.8rem 0 3.2rem 0; }
 
 .heading-3 {
-  font-size: 2.6rem; }
+  font-size: 3.2rem; }
 
 .search {
   display: flex;
@@ -587,3 +587,92 @@ body {
       height: 12.7rem;
       font-size: 3.6rem;
       padding: 4rem 9rem; }
+
+.main__subscribe .section-hero {
+  background-color: rgba(229, 229, 229, 0.3); }
+  .main__subscribe .section-hero__box {
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    grid-column-gap: 13.6rem;
+    justify-content: center;
+    padding: 9rem 0; }
+    .main__subscribe .section-hero__box__description--sub-title {
+      font-weight: 500; }
+    .main__subscribe .section-hero__box__description--title {
+      margin-bottom: 6.3rem; }
+    .main__subscribe .section-hero__box__description--text {
+      font-size: 2.2rem; }
+    .main__subscribe .section-hero__box__img {
+      grid-column: 2 /-1;
+      align-self: end; }
+
+.main__subscribe .section-content {
+  background-color: #6ec6ff;
+  padding: 6rem 0; }
+  .main__subscribe .section-content__container {
+    text-align: center;
+    position: relative; }
+    .main__subscribe .section-content__container__sub-title {
+      font-weight: 500;
+      margin-bottom: 6.6rem;
+      line-height: 2; }
+    .main__subscribe .section-content__container__cards {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .main__subscribe .section-content__container__cards .card {
+        width: 58.8rem;
+        height: 22.2rem;
+        background-color: #fff;
+        border: none;
+        border-radius: 1rem;
+        box-shadow: 0 0.4rem 1.4rem #c4c4c4;
+        margin-bottom: 4.8rem;
+        display: grid;
+        grid-template: repeat(5, max-content)/repeat(2, max-content);
+        justify-content: space-around;
+        align-content: center; }
+        .main__subscribe .section-content__container__cards .card__label {
+          grid-row: 1 / 2;
+          grid-column: 1 / 2;
+          text-align: left;
+          padding-top: 0.5rem; }
+          .main__subscribe .section-content__container__cards .card__label span {
+            font-size: 1.2rem;
+            color: #fff;
+            background-color: #ec652b;
+            border: none;
+            border-radius: 3rem;
+            padding: 0.5rem 1.8rem; }
+        .main__subscribe .section-content__container__cards .card__price {
+          margin-bottom: 1.2rem;
+          grid-row: 2 / 3; }
+        .main__subscribe .section-content__container__cards .card__month {
+          font-size: 2.2rem;
+          grid-row: 3 / 4; }
+        .main__subscribe .section-content__container__cards .card__discount {
+          color: #fff;
+          font-size: 3.6rem;
+          font-weight: 700;
+          background-color: #0069c0;
+          border: none;
+          border-radius: 50%;
+          padding: 3rem;
+          grid-row: 2 / 4;
+          grid-column: 2 / -1;
+          text-align: center;
+          display: inline-block; }
+        .main__subscribe .section-content__container__cards .card__line {
+          background-color: #e5e5e5;
+          grid-row: 4 / 5;
+          grid-column: 1 / -1;
+          margin: 1rem 0; }
+        .main__subscribe .section-content__container__cards .card__notice {
+          font-size: 1.6rem;
+          grid-row: 5 / 6;
+          align-self: center; }
+        .main__subscribe .section-content__container__cards .card__btn {
+          font-size: 1.6rem;
+          padding: 0.8rem 1.6rem;
+          grid-row: 5 / 6;
+          grid-column: 2 / -1; }
