Add: mypage page layout (in progress)

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -18,6 +18,11 @@ body {
 .heading-3 {
   font-size: $font-large-3;
 }
+
 .heading-4 {
-  font-style: $font-medium-2;
+  font-size: $font-medium-1;
+}
+
+.heading-5 {
+  font-size: $font-medium-2;
 }
