--- a/sass/layout/_contents-grid.scss
+++ b/sass/layout/_contents-grid.scss
@@ -1,9 +1,8 @@
-.home-contents {
+.contents {
   width: 120rem;
 
   display: grid;
-  grid-template-rows: repeat(2, min-content);
-  grid-template-columns: repeat(4, 1fr);
+  grid-template: repeat(2, min-content) / repeat(4, 1fr);
   grid-column-gap: 2.4rem;
   grid-row-gap: 3.5rem;
 }
