--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/category";
 @import "components/banner";
 @import "components/slider";
+@import "components/card";
 
 @import "layout/header";
 @import "layout/hero";
@@ -25,3 +26,4 @@
 @import "pages/about";
 @import "pages/subscribe";
 @import "pages/event";
+@import "pages/mypage";
