--- a/sass/components/_contents.scss
+++ b/sass/components/_contents.scss
@@ -1,4 +1,4 @@
-.contents-box {
+.contents__box {
   width: 28.2rem;
 
   &__thumbnail {
@@ -13,6 +13,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 1rem;
+
     .hashtags {
       list-style: none;
       display: flex;
@@ -37,7 +38,7 @@
     }
   }
 
-  .contents-title {
+  &__title {
     font-size: $font-medium-1;
     font-weight: 700;
     line-height: 1.3;
@@ -46,5 +47,61 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+  }
+}
+
+.my-contents__box {
+  width: 58.8rem;
+  border: none;
+  border-radius: 1rem;
+  box-shadow: 0 0.4rem 1.4rem $color-grey-light-2;
+  padding: 0 2rem 2rem 2rem;
+
+  display: grid;
+  grid-template-rows: repeat(4, max-content);
+  grid-template-columns: max-content 1fr min-content;
+  grid-column-gap: 2.5rem;
+
+  &__btn-close {
+    font-size: $font-medium-2;
+    font-weight: 900;
+    color: $color-blue-light-2;
+    text-decoration: none;
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
+    display: block;
+  }
+
+  &__thumbnail {
+    width: 18rem;
+    height: 12.5rem;
+    grid-row: 2 / span 3;
+    grid-column: 1 / 2;
+  }
+
+  &__description {
+    grid-row: 2 / span 3;
+    grid-column: 2 / 3;
+    align-self: center;
+
+    &__title {
+      font-size: $font-medium-2;
+      font-weight: 700;
+      line-height: 1.3;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    &__hashtags {
+      list-style: none;
+      display: flex;
+      &--item {
+        font-size: $font-small-1;
+        margin-right: 0.7rem;
+      }
+    }
   }
 }
