--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/banner";
 @import "components/slider";
 @import "components/card";
+@import "components/coupon";
 
 @import "layout/header";
 @import "layout/hero";
