--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/slider";
 @import "components/card";
 @import "components/coupon";
+@import "components/floating-bar";
 
 @import "layout/header";
 @import "layout/hero";
@@ -28,3 +29,4 @@
 @import "pages/subscribe";
 @import "pages/event";
 @import "pages/mypage";
+@import "pages/list";
