--- a/css/style.css
+++ b/css/style.css
@@ -425,16 +425,17 @@ body {
   width: 4.8rem;
   height: 14rem;
   background-color: #f6f6f6;
+  border: none;
+  border-radius: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; }
-  .floating-bar__list {
-    list-style: none; }
+  justify-content: space-evenly;
+  align-items: center; }
   .floating-bar__item {
     width: 100%; }
     .floating-bar__item--top, .floating-bar__item--bottom {
-      width: 2.5rem;
-      height: 1.4rem; }
+      width: 4rem;
+      height: 3rem; }
     .floating-bar__item--home {
       width: 3rem;
       height: 3rem; }
@@ -1082,7 +1083,11 @@ body {
 
 .main__list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); }
+  grid-template: 0/repeat(3, 1fr); }
+  .main__list .floating-bar {
+    grid-column: 3 / -1;
+    justify-self: center;
+    margin-top: 10rem; }
   .main__list__container {
     width: 120rem;
     margin: 0 auto;
