--- a/sass/components/_floating-bar.scss
+++ b/sass/components/_floating-bar.scss
@@ -2,20 +2,20 @@
   width: 4.8rem;
   height: 14rem;
   background-color: $color-grey-light-0;
+  border: none;
+  border-radius: 1rem;
   display: flex;
   flex-direction: column;
-
-  &__list {
-    list-style: none;
-  }
+  justify-content: space-evenly;
+  align-items: center;
 
   &__item {
     width: 100%;
 
     &--top,
     &--bottom {
-      width: 2.5rem;
-      height: 1.4rem;
+      width: 4rem;
+      height: 3rem;
     }
 
     &--home {
