--- a/sass/sass/pages/_home.scss
+++ b/sass/sass/pages/_home.scss
@@ -3,6 +3,16 @@
   font-size: 1.6rem;
 }
 
+// .sticky {
+//   position: fixed;
+//   top: 0;
+//   left: 50%;
+//   transform: translateX(-50%);
+//   background-color: rgba($color-blue-light-2, 0.4);
+//   display: inline-block;
+//   z-index: 9999;
+// }
+
 .hero {
   width: 120rem;
   min-height: 40rem;
