--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,9 @@ body {
 .heading-5 {
   font-size: 2.2rem; }
 
+.hidden {
+  display: none !important; }
+
 .search {
   display: flex;
   justify-content: center;
@@ -1045,6 +1048,10 @@ body {
       font-size: 2.2rem;
       font-weight: 900;
       margin: 0 2rem; }
+    .main__mypage .section-user__user-nav .default-open {
+      font-weight: 700;
+      padding-bottom: 0.8rem;
+      border-bottom: 4px solid #2196f3; }
 
 .main__mypage .section-content {
   padding-bottom: 9rem; }
