--- a/css/style.css
+++ b/css/style.css
@@ -552,7 +552,7 @@ body {
   width: 18rem; }
   .list-nav__main-menu {
     background-color: #2196f3; }
-    .list-nav__main-menu__link {
+    .list-nav__main-menu__link:link, .list-nav__main-menu__link:visited {
       width: 100%;
       text-decoration: none;
       color: #fff;
@@ -561,6 +561,10 @@ body {
       letter-spacing: 3px;
       padding: 0.8rem 0 0.8rem 2.8rem;
       display: inline-block; }
+    .list-nav__main-menu__link:hover, .list-nav__main-menu__link:active {
+      background-color: #6ec6ff; }
+    .list-nav__main-menu__link.default-open {
+      background-color: #6ec6ff; }
   .list-nav__sub-menu {
     background-color: #f6f6f6; }
     .list-nav__sub-menu__item {
@@ -1168,7 +1172,7 @@ body {
   .main__list .section-subject {
     grid-column: 2 / -1; }
     .main__list .section-subject__title {
-      margin: 4.8rem 0; }
+      margin-bottom: 4.8rem; }
     .main__list .section-subject__sub-title {
       font-weight: 500;
       margin-top: 4.8rem; }
@@ -1182,7 +1186,7 @@ body {
   .main__list .section-age {
     grid-column: 2 / -1; }
     .main__list .section-age__title {
-      margin: 4.8rem 0; }
+      margin-bottom: 4.8rem; }
     .main__list .section-age__sub-title {
       font-weight: 500;
       margin-top: 4.8rem; }
@@ -1196,7 +1200,7 @@ body {
   .main__list .section-theme {
     grid-column: 2 / -1; }
     .main__list .section-theme__title {
-      margin: 4.8rem 0; }
+      margin-bottom: 4.8rem; }
     .main__list .section-theme__sub-title {
       font-weight: 500;
       margin-top: 4.8rem; }
