--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -4,7 +4,8 @@
   &__main-menu {
     background-color: $color-blue-light-2;
 
-    &__link {
+    &__link:link,
+    &__link:visited {
       width: 100%;
       text-decoration: none;
       color: #fff;
@@ -13,6 +14,15 @@
       letter-spacing: 3px;
       padding: 0.8rem 0 0.8rem 2.8rem;
       display: inline-block;
+    }
+
+    &__link:hover,
+    &__link:active {
+      background-color: $color-blue-light-1;
+    }
+
+    &__link.default-open {
+      background-color: $color-blue-light-1;
     }
   }
 
