--- a/sass/pages/_list.scss
+++ b/sass/pages/_list.scss
@@ -67,7 +67,7 @@
     grid-column: 2 / -1;
 
     &__title {
-      margin: 4.8rem 0;
+      margin-bottom: 4.8rem;
     }
 
     &__sub-title {
@@ -89,7 +89,7 @@
     grid-column: 2 / -1;
 
     &__title {
-      margin: 4.8rem 0;
+      margin-bottom: 4.8rem;
     }
 
     &__sub-title {
@@ -111,7 +111,7 @@
     grid-column: 2 / -1;
 
     &__title {
-      margin: 4.8rem 0;
+      margin-bottom: 4.8rem;
     }
 
     &__sub-title {
