--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ html {
 
 body {
   box-sizing: border-box;
-  min-height: 100vh; }
+  min-height: 100vh;
+  position: relative; }
 
 body {
   font-family: "Noto Sans KR", sans-serif;
@@ -474,6 +475,46 @@ body {
     .floating-bar__item--home {
       width: 3rem;
       height: 3rem; }
+
+.modal-window__box {
+  width: 50.2rem;
+  background-color: #fff;
+  border: none;
+  border-radius: 3px;
+  padding: 1.5rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .modal-window__box__btn--close {
+    color: #000;
+    font-size: 3.6rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+    align-self: flex-end; }
+  .modal-window__box__title {
+    font-weight: 700;
+    margin-bottom: 1.7rem; }
+  .modal-window__box__text {
+    margin-bottom: 3.6rem; }
+  .modal-window__box__btn--mypage {
+    font-size: 1.6rem !important;
+    padding: 1rem !important; }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  z-index: 5; }
 
 .header__box {
   width: 120rem;
