--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import "components/card";
 @import "components/coupon";
 @import "components/floating-bar";
+@import "components/modal";
 
 @import "layout/header";
 @import "layout/hero";
