--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,10 +1,10 @@
 .card {
   width: 58.8rem;
-  height: 22.2rem;
   background-color: #fff;
   border: none;
   border-radius: 1rem;
   box-shadow: 0 0.4rem 1.4rem $color-grey-light-2;
+  padding: 2rem;
   margin-bottom: 4.8rem;
 
   display: grid;
