--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -9,6 +9,11 @@
       display: flex;
       justify-content: center;
 
+      &__img {
+        width: 30rem;
+        height: 30rem;
+      }
+
       &__description {
         display: flex;
         flex-direction: column;
