--- a/sass/pages/_event.scss
+++ b/sass/pages/_event.scss
@@ -1,139 +1,148 @@
 .main__event {
-  .section-hero {
-    background-color: $color-orange;
-    padding: 2.5rem 0;
+	.section-hero {
+		background-color: $color-orange;
+		padding: 2.5rem 0;
 
-    &__box {
-      width: 120rem;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
+		&__box {
+			width: 120rem;
+			margin: 0 auto;
+			display: flex;
+			justify-content: space-between;
 
-      &__description {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+			&__description {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
 
-        &--name {
-          font-size: $font-medium-2;
-          font-weight: 500;
-          margin-bottom: 1.7rem;
-        }
+				&--name {
+					font-size: $font-medium-2;
+					font-weight: 500;
+					margin-bottom: 1.7rem;
+				}
 
-        &--duration {
-          margin-bottom: 5rem;
+				&--duration {
+					margin-bottom: 5rem;
 
-          span {
-            background-color: #000;
-            color: #fff;
-            font-size: $font-small-2;
-            font-weight: 700;
-            letter-spacing: 2px;
-            border: none;
-            border-radius: 1rem;
-            padding: 0.6rem;
-          }
-        }
+					span {
+						background-color: #000;
+						color: #fff;
+						font-size: $font-small-2;
+						font-weight: 700;
+						letter-spacing: 2px;
+						border: none;
+						border-radius: 1rem;
+						padding: 0.6rem;
+					}
+				}
 
-        &--text {
-          font-size: $font-default;
-          font-weight: 500;
-          letter-spacing: 2px;
-          line-height: 1.8;
-          margin-bottom: 8.8rem;
-        }
+				&--text {
+					font-size: $font-default;
+					font-weight: 500;
+					letter-spacing: 2px;
+					line-height: 1.8;
+					margin-bottom: 8.8rem;
+				}
 
-        &--notice {
-          font-size: $font-small-2;
-        }
-      }
-    }
-  }
+				&--notice {
+					font-size: $font-small-2;
+				}
+			}
+		}
+	}
 
-  .section-content {
-    .event-code {
-      display: grid;
-      grid-template: repeat(2, 1fr) min-content / max-content;
-      grid-row-gap: 2rem;
-      padding: 3.6rem;
-      box-shadow: 0 0.2rem 1.7rem $color-grey-light-1;
-      justify-content: center;
-      align-items: center;
-      justify-items: center;
-      margin-bottom: 5rem;
+	.section-content {
+		.event-code {
+			display: grid;
+			grid-template: repeat(2, 1fr) min-content / max-content;
+			grid-row-gap: 2rem;
+			padding: 3.6rem;
+			box-shadow: 0 0.2rem 1.7rem $color-grey-light-1;
+			justify-content: center;
+			align-items: center;
+			justify-items: center;
+			margin-bottom: 5rem;
 
-      &__title {
-        color: $color-orange;
-        font-size: $font-medium-2;
-        justify-self: center;
-      }
+			&__title {
+				color: $color-orange;
+				font-size: $font-medium-2;
+				justify-self: center;
+			}
 
-      &__input {
-        width: 24.4rem;
-        outline: none;
-        border: 1px solid $color-grey-light-2;
-        border-radius: 3px;
-        background-color: $color-grey-light-0;
-        font-size: $font-default;
-        font-family: inherit;
-        padding: 1.5rem;
-        display: inline-block;
-      }
+			&__input {
+				width: 24.4rem;
+				outline: none;
+				border: 1px solid $color-grey-light-2;
+				border-radius: 3px;
+				background-color: $color-grey-light-0;
+				font-size: $font-default;
+				font-family: inherit;
+				padding: 1.5rem;
+				display: inline-block;
+			}
 
-      &__btn {
-        width: 24.4rem;
-        font-size: $font-default;
-        background-color: $color-orange;
-        border-radius: 3rem;
-      }
-    }
+			&__btn--default {
+				width: 24.4rem;
+				font-size: $font-default;
+				background-color: $color-orange;
+				border-radius: 3rem;
+			}
 
-    .event-container {
-      margin-bottom: 9rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+			&__btn--share {
+				width: 24.4rem;
+				font-size: $font-default;
+				color: $color-orange;
+				background-color: $color-grey-light-0;
+				border-radius: 3rem;
+			}
+		}
 
-      &__title {
-        font-size: $font-medium-1;
-        color: $color-grey-light-2;
-        margin-bottom: 4rem;
-      }
+		.event-container {
+			margin-bottom: 9rem;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
 
-      .event-step {
-        &:not(:last-child) {
-          margin-bottom: 3rem;
-        }
+			&__title {
+				font-size: $font-medium-1;
+				color: $color-grey-light-2;
+				margin-bottom: 4rem;
+			}
 
-        &__caption {
-          color: $color-orange;
-          font-size: $font-default;
-          text-align: center;
-        }
-        &__box {
-          width: 53.9rem;
-          border: 2px solid $color-orange;
-          border-radius: 1rem;
-          padding: 2.5rem;
-          display: inline-block;
+			.event-step {
+				&:not(:last-child) {
+					margin-bottom: 3rem;
+				}
 
-          &--title {
-            font-size: $font-medium-2;
-            font-weight: 700;
-            margin-bottom: 1.3rem;
-          }
+				&__caption {
+					color: $color-orange;
+					font-size: $font-default;
+					text-align: center;
+				}
 
-          &--description {
-            font-size: $font-default;
-          }
+				&__box {
+					width: 53.9rem;
+					border: 2px solid $color-orange;
+					border-radius: 1rem;
+					padding: 2.5rem;
+					display: inline-block;
 
-          &--notice {
-            color: $color-grey-dark-1;
-            font-size: $font-small-2;
-            margin-top: 1.3rem;
-          }
-        }
-      }
-    }
-  }
+					&--title {
+						font-size: $font-medium-2;
+						font-weight: 700;
+						margin-bottom: 1.3rem;
+					}
+
+					&--description {
+						font-size: $font-default;
+					}
+
+					&--notice {
+						color: $color-grey-dark-1;
+						font-size: $font-small-2;
+						margin-top: 1.3rem;
+					}
+				}
+			}
+		}
+	}
 }
