--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+.animate__animated.animate__fadeInUp {
+  --animate-delay: 1s;
+  --animate-duration: 3s; }
+
+@keyframes scale {
+  0% {
+    transform: scale(1); }
+  50% {
+    transform: scale(1.3); }
+  100% {
+    transform: scale(1); } }
+
 *,
 *::after,
 *::before {
@@ -890,12 +902,10 @@ body {
       height: 28.4rem;
       border: none;
       border-radius: 50%;
-      position: relative; }
+      display: grid; }
       .main__about .section-features__box__img .section-features__icon {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%); }
+        justify-self: center;
+        align-self: center; }
     .main__about .section-features__box__text {
       font-size: 2.6rem;
       font-weight: 500;
