--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,24 +1,24 @@
 .header {
-  margin: 2rem 0;
-  font-size: 1.6rem;
+	width: 100%;
+	font-size: 1.6rem;
 }
 
 .hero {
-  width: 120rem;
-  min-height: 40rem;
-  margin: 7rem auto 0 auto;
+	width: 120rem;
+	min-height: 40rem;
+	margin: 7rem auto 0 auto;
 }
 
 .main-slider {
-  background-color: rgba($color-blue-light-1, 0.2);
+	background-color: rgba($color-blue-light-1, 0.2);
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .footer {
-  height: 25rem;
+	height: 25rem;
 }
